Fix menu button size & alignment

--- a/src/scss/includes/menu.scss
+++ b/src/scss/includes/menu.scss
@@ -84,6 +84,7 @@ $productDrawerWidth: 744px;
   width: 100%;
   height: 100%;
   color: $grey-semi-darkness;
+  line-height: normal;
 }
 
 @media (max-width: 640px) {
